Update print statement to say 'Goodbye World'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Full Clock Tool</title>
+<title>Full Clock Tool(build 25.11.11)</title>
 <style>
 /* --- 共通スタイル --- */
 * { box-sizing: border-box; }
@@ -449,3 +449,4 @@ body.dark .timer-progress { background:#444; }
 </script>
 </body>
 </html>
+
